# randomnames

./: README.md  pyproject.toml
src/randomnames/: __init__.py  adjectives.py  animals.py
tests/: test_randomnames.py
