[project]
name = "randomnames"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "William Fondrie", email = "fondriew@gmail.com" }
]
requires-python = ">=3.10"
dependencies = []

[project.scripts]
randomnames = "randomnames:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
